k8s/apps/trek/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: trek
  namespace: trek
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "TREK"
    gethomepage.dev/description: "Travel planning"
    gethomepage.dev/group: "life"
    gethomepage.dev/icon: "trek.png"
    gethomepage.dev/href: "https://trek.item.fyi"
    gethomepage.dev/siteMonitor: "http://trek.trek.svc.cluster.local"
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=trek"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`trek.item.fyi`)
      middlewares:
        - name: authentik
          namespace: authentik
      services:
        - name: trek
          port: 80
  tls: {}
